Change distDir to root directory in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -5,9 +5,15 @@
         "src": "package.json",
         "use": "@vercel/static-build",
         "config": {
-          "distDir": "public"
+          "distDir": "."
         }
       }
+    ],
+    "rewrites": [
+        {
+            "source":"/(.*)",
+            "destination":"/index.html"
+        }
     ]
   }
   
